--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,47 @@
 html, body{
     box-sizing: border-box;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 0; 
     height: 100%;
     #font-weight: bold;
 }
 
+ul,
+li,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 10px;
+  margin: 0;
+}
+
+.location-panel {
+    width: 200px;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+}
 
 #map {
     height: 100%;
+    padding: 0px;
+    margin-left: 200px;
+    width: 100%;
 }
 
 .container {
   #background-color: #dbe2e8;
   padding: 0px;
   height: 100%;
+}
+
+.inline-block {
+  display: inline-block;
 }
